# z3

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README-Starexec.md  README-Z3.md  README.md  clean_build.sh  run_noodler_tests.sh
.github/workflows/: build.yml  js-binding.yml
docker/: z3-noodler.Dockerfile
src/: CMakeLists.txt
src/api/js/: README.md
src/api/js/scripts/: build-wasm.ts
src/api/js/src/high-level/: high-level.test.ts
src/ast/: seq_decl_plugin.cpp  seq_decl_plugin.h
src/ast/rewriter/: seq_rewriter.cpp  seq_rewriter.h
src/cmd_context/: basic_cmds.cpp
src/math/lp/: static_matrix.h  static_matrix_def.h
src/params/: context_params.cpp  context_params.h
src/parsers/smt2/: smt2parser.cpp
src/shell/: CMakeLists.txt  main.cpp
src/smt/: CMakeLists.txt  smt_setup.cpp  smt_setup.h
src/smt/params/: CMakeLists.txt  smt_params.cpp  smt_params.h  smt_params_helper.pyg  theory_str_noodler_params.cpp  theory_str_noodler_params.h
src/smt/tactic/: smt_tactic_core.cpp
src/smt/theory_str_noodler/: aut_assignment.cpp  aut_assignment.h  ca_str_constr.cpp  ca_str_constr.h  counter_automaton.cpp  counter_automaton.h  decision_procedure.cpp  decision_procedure.h  expr_cases.cpp  expr_cases.h  expr_solver.cpp  expr_solver.h  formula.cpp  formula.h  formula_preprocess.cpp  formula_preprocess.h  inclusion_graph.cc  inclusion_graph.h  inclusion_graph_node.cc  inclusion_graph_node.h  lang_decision_procedure.cpp  lang_decision_procedure.h  length_decision_procedure.cpp  length_decision_procedure.h  memb_heuristics_procedures.cpp  memb_heuristics_procedures.h  nielsen_decision_procedure.cpp  nielsen_decision_procedure.h  parikh_image.cpp  parikh_image.h  quant_lia_solver.h  regex.cpp  regex.h  state_len.h  theory_str_noodler.cpp  theory_str_noodler.h  theory_str_noodler_final_check.cpp  theory_str_noodler_model.cpp  ugly_global_variables.cpp  ugly_global_variables.h  (+5 more)
src/solver/: check_logic.cpp  smt_logics.cpp
src/test/: CMakeLists.txt
src/test/noodler/: CMakeLists.txt  decision-procedure.cpp  formula-preprocess.cpp  inclusion-graph-node.cc  main.cc  parikh.cc  test_utils.h  theory_str_noodler.cc  util.cc
src/util/: buffer.h
